# ned

./: .clang-format  .clangd  .gitignore  .gitmodules  .ned-agent-history.json  .ned.json  CMakeLists.txt  EMBED_PLAN.md  LICENSE  README.md  WINDOWS.md  asdf.txt  bookmarks.h  build-win-ci.bat  build-win.bat  build.sh  editor.cpp  editor.h  entitlements.plist  files.cpp  files.h  format.sh  globals.cpp  globals.h  imgui.ini  json.hpp  keybinds.txt  macos_window.h  macos_window.mm  main  main.cpp  nanosvgrast.h  ned.cpp  ned.h  ned.icns  ned.rc  ned_embed.cpp  ned_embed.h  ned_imgui_config.h  notes.md  (+13 more)
.build/: compile_commands.json  config.h  ned
.build/shaders/: shader.h
.github/workflows/: format.yml  pack-app.yml  test-multi-platform-build.yml
ai/: agent_request.cpp  agent_request.h  ai_agent.cpp  ai_agent.h  ai_agent_history.cpp  ai_agent_history.h  ai_agent_text_input.cpp  ai_agent_text_input.h  ai_message.h  ai_open_router.cpp  ai_open_router.h  ai_tab.cpp  ai_tab.h  native_text_input.h  native_text_input.mm  textselect.cpp  textselect.hpp
ai/mcp/: mcp_file_system.cpp  mcp_file_system.h  mcp_manager.cpp  mcp_manager.h  mcp_terminal.cpp  mcp_terminal.h
editor/: bookmarks.h  editor.cpp  editor.h  editor_bookmarks.h  editor_copy_paste.cpp  editor_copy_paste.h  editor_cursor.cpp  editor_cursor.h  editor_git.cpp  editor_git.h  editor_header.cpp  editor_header.h  editor_highlight.cpp  editor_highlight.h  editor_indentation.cpp  editor_indentation.h  editor_keyboard.cpp  editor_keyboard.h  editor_line_jump.cpp  editor_line_jump.h  editor_line_numbers.cpp  editor_line_numbers.h  editor_lsp.cpp  editor_lsp.h  editor_mouse.cpp  editor_mouse.h  editor_render.cpp  editor_render.h  editor_scroll.cpp  editor_scroll.h  editor_selection.cpp  editor_selection.h  editor_tree_sitter.cpp  editor_tree_sitter.h  editor_types.h  editor_utils.h  git_libgit2.cpp  git_libgit2.h  line_jump.cpp  line_jump.h  (+1 more)
editor/queries/: cpp.scm  csharp.scm  hcl.scm  html.scm  jsx.scm  kotlin.scm  python.scm  tsx.scm
files/: file_content_search.cpp  file_content_search.h  file_finder.cpp  file_finder.h  file_monitor.cpp  file_monitor.h  file_tree.cpp  file_tree.h  file_undo_redo.h  files.cpp  files.h  undo_redo_manager.h
icons/: ned.icns
lexers/: cpp.h  csharp.h  css.h  html.h  java.h  jsx.h  python.h  tsx.h
lib/: json.hpp  nanosvg.h  nanosvgrast.h
lsp/: connection_patched.cpp  lsp.cpp  lsp.h  lsp_adapter_clangd.cpp  lsp_adapter_clangd.h  lsp_adapter_go.cpp  lsp_adapter_go.h  lsp_adapter_pyright.cpp  lsp_adapter_pyright.h  lsp_adapter_pyright_windows.cpp  lsp_adapter_pyright_windows.h  lsp_adapter_typescript.cpp  lsp_adapter_typescript.h  lsp_autocomplete.cpp  lsp_autocomplete.h  lsp_client.cpp  lsp_client.h  lsp_dashboard.cpp  lsp_dashboard.h  lsp_goto_def.cpp  lsp_goto_def.h  lsp_goto_ref.cpp  lsp_goto_ref.h  lsp_includes.h  lsp_manager.cpp  lsp_manager.h  lsp_manager_windows.cpp  lsp_manager_windows.h  lsp_stubs_windows.cpp  lsp_stubs_windows_backup.cpp  lsp_symbol_info.cpp  lsp_symbol_info.h  lsp_uri_options.cpp  lsp_uri_options.h
lsp/lsp-framework-pregenerated/lsp/: messages.h  types.cpp  types.h
misc/: build_deb.sh  keybinds.txt  ned-1.0.0.deb
settings/: amber.json  custom1.json  custom2.json  custom3.json  default-keybinds.json  keybinds.json  lsp.json  ned.json  open_router_key.json  solarized-light.json  solarized.json  test.json
shaders/: burn_in.frag  fragment.glsl  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shader_types.cpp  shader_types.h  vertex.glsl
util/: app.cpp  app.h  application_manager.cpp  application_manager.h  bookmarks.h  cleanup_manager.cpp  cleanup_manager.h  close_popper.cpp  close_popper.h  config.h.in  debug_console.cpp  debug_console.h  file_finder.cpp  file_finder.h  font.cpp  font.h  frame.cpp  frame.h  graphics_manager.cpp  graphics_manager.h  icon_definitions.h  init.cpp  init.h  initialization_manager.cpp  initialization_manager.h  keybinds.cpp  keybinds.h  keybinds.txt  line_jump.cpp  line_jump.h  lsp_install.MD  render.cpp  render.h  scroll.cpp  scroll.h  settings.cpp  settings.h  settings_file_manager.cpp  settings_file_manager.h  shader.cpp  (+14 more)
